<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CRUDActivity">

    <Button
        android:id="@+id/save_sample_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_sample" />

    <Button
        android:id="@+id/update_sample_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_sample" />

    <Button
        android:id="@+id/delete_sample_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_sample" />

    <Button
        android:id="@+id/query_sample_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_sample" />

</LinearLayout>