<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MaxSampleActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_codes" />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_default"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_codes_max_first_line"
                android:textSize="18sp" />
        </LinearLayout>
    </HorizontalScrollView>
    <Button
        android:id="@+id/max_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/run_codes_above" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_default"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_codes_max_second_line_pre"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/age_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="@string/twenty_three"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_codes_max_second_line_end"
                    android:textSize="18sp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_codes_max_third_line"
                android:textSize="18sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/max_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/run_codes_above" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />
    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/textfield_default"
        android:gravity="center_vertical" />

</LinearLayout>