<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/manage_table_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_table" />
    <Button
        android:id="@+id/crud_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/crud" />
    <Button
        android:id="@+id/aggregate_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aggregate_functions" />

</LinearLayout>