<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ManageActivity">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_generation_tip" />
    <Button
        android:id="@+id/current_model_structure_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_model_structure"/>
    <Button
        android:id="@+id/operate_database_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_table_structure"/>
</LinearLayout>