<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TableActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#8e8d8e"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_1"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="6dip"
            android:text="@string/column_name"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/text_2"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="6dip"
            android:text="@string/column_type"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/text_3"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="6dip"
            android:text="@string/column_nullable"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/text_4"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="6dip"
            android:text="@string/column_unique"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/text_5"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="6dip"
            android:text="@string/column_default"
            android:textColor="#fff" />
    </LinearLayout>
    <ListView
        android:id="@+id/table_structure_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>